--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tempweb",
+  "name": "weather-elements",
   "version": "0.0.1",
-  "description": "Template for Web Development",
+  "description": "Weather Widget with HTML Elements / Web Components",
   "main": "dist/main.js",
   "files": [
     "dist"
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tarepan/tempWeb.git"
+    "url": "git+https://github.com/tarepan/weather-elements.git"
   },
   "author": "tarepan",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tarepan/tempWeb/issues"
+    "url": "https://github.com/tarepan/weather-elements/issues"
   },
-  "homepage": "https://github.com/tarepan/tempWeb#readme",
+  "homepage": "https://github.com/tarepan/weather-elements#readme",
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
@@ -31,7 +31,6 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-jest": "^22.15.2",
     "eslint-plugin-prettier": "^3.1.0",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
